--- a/src/components/menu/menu.style.css
+++ b/src/components/menu/menu.style.css
@@ -1,1 +1,12 @@
-/* No CSS *//*# sourceMappingURL=menu.style.css.map */
+.categories-container {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+/*# sourceMappingURL=menu.style.css.map */
